Fix Railway build: Build shared package first
- Add build script to shared package.json
- Update nixpacks.toml to build shared before server
- Fix TypeScript project references
- Server should deploy successfully now

--- a/server/nixpacks.toml
+++ b/server/nixpacks.toml
@@ -2,10 +2,10 @@
 nixPkgs = ["nodejs_20", "npm-9_x"]
 
 [phases.install]
-cmds = ["npm install"]
+cmds = ["cd ../shared && npm install", "npm install"]
 
 [phases.build]
-cmds = ["npm run build"]
+cmds = ["cd ../shared && npm run build || true", "npm run build"]
 
 [start]
 cmd = "npm start"
