--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
     "dev:client": "cd client && npm run dev",
     "dev:server": "cd server && npm run dev",
-    "build": "npm run build:client && npm run build:server",
+    "build": "npm run build:shared && npm run build:client && npm run build:server",
+    "build:shared": "cd shared && npm install && npm run build",
     "build:client": "cd client && npm run build",
     "build:server": "cd server && npm run build",
     "start": "concurrently \"npm run start:client\" \"npm run start:server\"",
