--- a/server/nixpacks.toml
+++ b/server/nixpacks.toml
@@ -2,10 +2,10 @@
 nixPkgs = ["nodejs_20", "npm-9_x"]
 
 [phases.install]
-cmds = ["cd ../shared && npm install", "npm install"]
+cmds = ["npm install"]
 
 [phases.build]
-cmds = ["cd ../shared && npm run build || true", "npm run build"]
+cmds = ["npm run build"]
 
 [start]
 cmd = "npm start"
