--- a/server/nixpacks.toml
+++ b/server/nixpacks.toml
@@ -2,11 +2,11 @@
 nixPkgs = ["nodejs_20", "npm-9_x"]
 
 [phases.install]
-cmds = ["npm install"]
+cmds = ["cd server && npm install"]
 
 [phases.build]
-cmds = ["npm run build"]
+cmds = ["cd server && npm run build"]
 
 [start]
-cmd = "npm start"
+cmd = "cd server && npm start"
 
