--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ["nodejs_20", "npm-9_x"]
 
 [phases.install]
-cmds = ["cd shared && npm install", "cd server && npm install"]
+cmds = ["npm install", "cd shared && npm install", "cd server && npm install"]
 
 [phases.build]
 cmds = ["cd shared && npm run build", "cd server && npm run build"]
