Fix Railway: Copy shared into server during build
- Add prebuild script to copy shared files into server/shared
- Update import paths to use server/shared instead of ../shared
- Update tsconfig to reference server/shared
- Works even when Railway only copies server/ directory
- Add shared/ to server/.gitignore

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "cd ../shared && npm install && npm run build && cd ../server && tsc",
+    "prebuild": "mkdir -p shared && cp -r ../shared/src shared/src && cp ../shared/package.json shared/ && cp ../shared/tsconfig.json shared/ 2>/dev/null || true",
+    "build": "cd shared && npm install && npm run build && cd .. && tsc",
     "start": "node dist/index.js",
     "type-check": "tsc --noEmit",
     "lint": "echo 'Linting skipped - no eslint config'",
