--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -18,6 +18,6 @@
       "@shared/*": ["../shared/src/*"]
     }
   },
-  "include": ["src/**/*", "../shared/src/**/*"],
+  "include": ["src/**/*", "shared/src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
