--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,10 +2,10 @@
 nixPkgs = ["nodejs_20", "npm-9_x"]
 
 [phases.install]
-cmds = ["npm install", "cd shared && npm install", "cd server && npm install"]
+cmds = ["cd server && npm install"]
 
 [phases.build]
-cmds = ["cd shared && npm run build", "cd server && npm run build"]
+cmds = ["cd server && npm run build"]
 
 [start]
 cmd = "cd server && npm start"
