Fix Railway deployment - use direct node command in start
- Changed start command to 'cd server && node dist/index.js'
- Removed npm start wrapper that was causing path issues
- Ensures working directory is correct when starting

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,5 +8,5 @@ cmds = ["cd server && npm install"]
 cmds = ["cd server && npm run build"]
 
 [start]
-cmd = "cd /app/server && npm start"
+cmd = "cd server && node dist/index.js"
 
