--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "cd shared && npm install && npm run build && cd .. && tsc",
-    "start": "cd /app/server && node dist/index.js",
+    "start": "node dist/index.js",
     "type-check": "tsc --noEmit",
     "lint": "echo 'Linting skipped - no eslint config'",
     "lint:fix": "echo 'Linting skipped - no eslint config'"
