--- a/server/nixpacks.toml
+++ b/server/nixpacks.toml
@@ -5,7 +5,7 @@ nixPkgs = ["nodejs_20", "npm-9_x"]
 cmds = ["npm install"]
 
 [phases.build]
-cmds = ["npm run build"]
+cmds = ["npm run build", "ls -la dist/ || echo 'Build failed - dist folder not found'"]
 
 [start]
 cmd = "node dist/index.js"
