--- a/server/nixpacks.toml
+++ b/server/nixpacks.toml
@@ -5,8 +5,8 @@ nixPkgs = ["nodejs_20", "npm-9_x"]
 cmds = ["npm install"]
 
 [phases.build]
-cmds = ["npm run build", "ls -la dist/ || echo 'Build failed - dist folder not found'"]
+cmds = ["npm run build", "ls -la dist/", "test -f dist/index.js || (echo 'ERROR: dist/index.js not found!' && exit 1)"]
 
 [start]
-cmd = "node dist/index.js"
+cmd = "pwd && ls -la && ls -la dist/ && node dist/index.js"
 
