Fix Dockerfile - build shared first, then server, with verification

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,22 +2,26 @@ FROM node:20
 
 WORKDIR /app
 
-# Copy package files
+# Copy package files first (for better caching)
 COPY package*.json ./
 COPY shared/package*.json ./shared/
 
-# Install dependencies
+# Install root dependencies
 RUN npm install
-RUN cd shared && npm install
 
-# Copy source files
+# Install shared dependencies
+RUN cd shared && npm install && cd ..
+
+# Copy all source files
 COPY . .
 
-# Build
+# Build shared first, then server
+RUN cd shared && npm run build && cd ..
 RUN npm run build
 
-# Verify build output
-RUN test -f dist/index.js || (echo "ERROR: dist/index.js not found after build!" && exit 1)
+# Verify build output exists
+RUN ls -la dist/ || (echo "ERROR: dist/ folder not found!" && exit 1)
+RUN test -f dist/index.js || (echo "ERROR: dist/index.js not found!" && exit 1)
 
 # Expose port
 EXPOSE 3001
