--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -19,6 +19,6 @@
       "@shared/*": ["shared/src/*"]
     }
   },
-  "include": ["src/**/*", "shared/src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "shared"]
 }
