Fix Dockerfile: Support both dist/index.js and dist/src/index.js paths

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -27,12 +27,12 @@ RUN echo "=== Building server ===" && npm run build
 
 # Verify build output exists
 RUN echo "=== Verifying build output ===" && pwd && ls -la && ls -la dist/ || (echo "ERROR: dist/ folder not found!" && exit 1)
-RUN test -f dist/index.js || (echo "ERROR: dist/index.js not found! Contents of dist/:" && ls -la dist/ && exit 1)
-RUN echo "=== Build successful! ===" && ls -la dist/index.js
+RUN echo "=== Checking for index.js ===" && (test -f dist/index.js && echo "Found dist/index.js") || (test -f dist/src/index.js && echo "Found dist/src/index.js") || (echo "ERROR: index.js not found! Contents of dist/:" && find dist -name "index.js" -type f && ls -la dist/ && exit 1)
+RUN echo "=== Build successful! ===" && (test -f dist/index.js && ls -la dist/index.js) || (test -f dist/src/index.js && ls -la dist/src/index.js)
 
 # Expose port
 EXPOSE 3001
 
-# Start server with debug
-CMD ["sh", "-c", "pwd && ls -la && ls -la dist/ && node dist/index.js"]
+# Start server with debug - try dist/index.js first, then dist/src/index.js
+CMD ["sh", "-c", "pwd && ls -la && ls -la dist/ && if [ -f dist/index.js ]; then node dist/index.js; elif [ -f dist/src/index.js ]; then node dist/src/index.js; else echo 'ERROR: index.js not found!' && find dist -name 'index.js' && exit 1; fi"]
 
