--- a/client/package.json
+++ b/client/package.json
@@ -15,15 +15,21 @@
   },
   "dependencies": {
     "@google/genai": "^1.30.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
+    "@react-three/rapier": "^2.2.0",
     "@stripe/stripe-js": "^8.5.3",
+    "maath": "^0.10.8",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "three": "^0.170.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/node": "^22.14.0",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@types/three": "^0.181.0",
     "@typescript-eslint/eslint-plugin": "^8.48.0",
     "@typescript-eslint/parser": "^8.48.0",
     "@vitejs/plugin-react": "^5.0.0",
