--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,9 @@
   },
   "dependencies": {
     "@google/genai": "^1.30.0",
+    "@react-spring/core": "^10.0.3",
+    "@react-spring/three": "^10.0.3",
+    "@react-spring/web": "^10.0.3",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
     "@react-three/rapier": "^2.2.0",
