--- a/client/package.json
+++ b/client/package.json
@@ -22,9 +22,12 @@
     "@react-three/fiber": "^9.4.2",
     "@react-three/rapier": "^2.2.0",
     "@stripe/stripe-js": "^8.5.3",
+    "clsx": "^2.1.1",
     "maath": "^0.10.8",
+    "motion": "^12.23.25",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.4.0",
     "three": "^0.170.0"
   },
   "devDependencies": {
